nav menu edit, added temporarily UI

--- a/themes/flatgroup/scss/base/_variables.scss
+++ b/themes/flatgroup/scss/base/_variables.scss
@@ -94,7 +94,8 @@ $theme-blue: #006ce4;
 $kui-shadow-100: 0px 2px 8px 0px rgba(26, 26, 26, .16);
 
 // $kui-theme: #9c785b;
-$kui-theme: #212121;
+// $kui-theme: #815a54;
+$kui-theme: #01335d;
 $kui-theme-secondary: #9c785b;
 $kui-theme-tertiary: #0a5ac3;
 $kui-theme-dark: #102838;
