--- a/themes/flatgroup/scss/base/_variables.scss
+++ b/themes/flatgroup/scss/base/_variables.scss
@@ -93,13 +93,10 @@ $theme-blue: #006ce4;
 
 $kui-shadow-100: 0px 2px 8px 0px rgba(26, 26, 26, .16);
 
-// $kui-theme: #9c785b;
-// $kui-theme: #815a54;
 $kui-theme: #01335d;
-$kui-theme-secondary: #9c785b;
+$kui-theme-secondary: #c08457;
 $kui-theme-tertiary: #0a5ac3;
 $kui-theme-dark: #102838;
-$kui-theme-200: #a67f5f;
 $kui-green-highlight: #3cd37b;
 
 $kui-theme-light: #f6f6f6;
